Implemented and use OpenedModulesGuard
Improved dependencies
Improved some tests