@@ -24,21 +24,12 @@
 					<!-- Must export/open some hidden package to run PADL
 					Creator JavaFile (JavaC) -->
 					<argLine>
-						--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.source.util=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.source.util=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-						--add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+						--add-opens=java.base/java.util=ALL-UNNAMED
 					</argLine>
 					<!-- Excluded on purpose -->
 					<excludes>
