@@ -25,10 +25,6 @@
 					<target>22</target>
 					<compilerArgs>
 						<arg>
-							--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED</arg>
-						<arg>
-							--add-exports=jdk.compiler/com.sun.source.util=ALL-UNNAMED</arg>
-						<arg>
 							--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
 						<arg>
 							--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
@@ -47,19 +43,10 @@
 				<version>3.2.5</version>
 				<configuration>
 					<argLine>
-						--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.source.util=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.source.util=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 					</argLine>
 				</configuration>
